--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <h1>Pockemon Battle</h1>
     </div>
     <div class="battle"></div>
+
     <div>
       <select name="maxscore" id="maxscore">
         <option value="3">3</option>
@@ -23,11 +24,13 @@
       <button type="button" class="player1btn">player1 win</button>
       <button type="button" class="player2btn">player2 win</button>
       <button type="button" class="resetBtn">reset</button>
+      <div class="participant"></div>
       <h1><span class="score1">0</span> : <span class="score2">0</span></h1>
     </div>
     <div class="container">
       <h1>Choose the Pockemon</h1>
     </div>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
   <script src="script.js"></script>
 </html>
