node 및 express 설정

--- a/index.html
+++ b/index.html
@@ -27,10 +27,24 @@
       <div class="participant"></div>
       <h1><span class="score1">0</span> : <span class="score2">0</span></h1>
     </div>
+    <div class="searchContainer">
+      <h2>Search the Pokemon</h2>
+      <form id="searchform">
+        <input
+          type="text"
+          placeholder="Pokemon Name"
+          id="nameinput"
+          name="query"
+        />
+        <button id="searchbtn">Search</button>
+      </form>
+      <div class="imagesContainer"></div>
+    </div>
     <div class="container">
       <h1>Choose the Pockemon</h1>
     </div>
   </body>
   <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-  <script src="script.js"></script>
+  <script src="index.js"></script>
+  <script src="app.js"></script>
 </html>
